<resources>
    <string name="app_name">LED Light Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="arduino_connected">Arduino Connected:</string>
    <string name="rx">RX:</string>
    <string name="read_buffer"><![CDATA[<Read Buffer>]]></string>
    <string name="status">Status:</string>
    <string name="bluetooth_status"><![CDATA[<Bluetooth Status>]]></string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="show_paired_devices">Show paired Devices</string>
    <string name="discover_new_devices">Discover New Devices</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="status_bluetooth_not_found">Status: Bluetooth not found</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="enabled">Enabled!</string>
    <string name="disabled">Disabled!</string>
    <string name="connecting">Connecting . . .</string>
    <string name="PlusSymbol">+</string>
    <string name="led_strips">LED Strips:</string>
    <string name="create_led_strip">Create LED Strip:</string>
    <string name="create_generator">Create Generator:</string>
    <string name="create_led_state">Create LED State:</string>
    <string name="transition_led_state">Transition LED State</string>
    <string name="insert_here">Insert Here</string>
    <string name="duration">Duration (s):</string>
    <string name="create_color">Create Color:</string>
    <string name="shows_the_color">Shows the color</string>
    <string name="red">Red:</string>
    <string name="_0">0</string>
    <string name="red_value">Red Value</string>
    <string name="blue">Blue:</string>
    <string name="green">Green:</string>
    <string name="save">Save</string>
    <string name="_255">255</string>
    <string name="starting_color">Starting Color:</string>
    <string name="ending_color">Ending Color:</string>
    <string name="create_sequential_generator">Create Sequential Generator:</string>
    <string name="random_generator">Random Generator</string>
    <string name="led_states">LED States:</string>
    <string name="todo">TODO</string>
    <string name="delete_led_state">Delete LED State</string>
    <string name="generator_type">Generator Type:</string>
    <string name="red_pin">Red Pin:</string>
    <string name="green_pin">Green Pin:</string>
    <string name="blue_pin">Blue Pin:</string>
    <string name="save_current_configuration">Save Current Configuration</string>
    <string name="save_current_configuration_popup">Save Current Configuration:</string>
    <string name="name">Name:</string>
    <string name="insert_name_here">Insert Name Here</string>
    <string name="simulation">Simulation</string>
</resources>
