<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SequentialGeneratorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_dark">

    <Button
        android:id="@+id/SaveSequentialGeneratorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="141dp"
        android:background="@drawable/save_button"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/CancelSequentialGeneratorButton"
        app:layout_constraintTop_toBottomOf="@+id/AddLEDStateButton" />

    <Button
        android:id="@+id/CancelSequentialGeneratorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="308dp"
        android:background="@drawable/cancel_button"
        android:text="@android:string/cancel"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CreateSequentialGeneratorText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/create_sequential_generator"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LEDStatesText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:gravity="start|center_vertical"
        android:text="@string/led_states"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/RandomGeneratorCheckBox"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:buttonTint="@color/white"
        android:text="@string/random_generator"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateSequentialGeneratorText" />

    <Button
        android:id="@+id/AddLEDStateButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="@drawable/round_button_red"
        android:text="@string/PlusSymbol"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateSequentialGeneratorText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LEDStateDisplayView"
        android:layout_width="410dp"
        android:layout_height="119dp"
        android:layout_marginTop="1dp"
        android:padding="4dp"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LEDStatesText" />

</androidx.constraintlayout.widget.ConstraintLayout>