<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SaveConfigurationNameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/SaveNameEditText"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:inputType="text"
        android:maxLines="1"
        android:text="@string/insert_name_here"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/SaveNameText"
        app:layout_constraintTop_toBottomOf="@+id/createColorText" />

    <TextView
        android:id="@+id/SaveNameText"
        android:layout_width="68dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:gravity="start|center_vertical"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SaveConfigurationNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/save_button"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SaveNameEditText" />

    <Button
        android:id="@+id/CancelConfigurationNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/cancel_button"
        android:text="@android:string/cancel"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SaveNameEditText" />

    <TextView
        android:id="@+id/createColorText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/save_current_configuration_popup"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>