<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LEDStripCard"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/blue_border"
    android:nestedScrollingEnabled="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LEDStripCardConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/LEDStripDeleteButton"
            android:layout_width="27dp"
            android:layout_height="39dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_delete_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/LEDStripCardBluePinText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LEDStripCardBluePinText"
            android:layout_width="106dp"
            android:layout_height="47dp"
            android:layout_marginTop="28dp"
            android:gravity="start|center_vertical"
            android:text="@string/blue_pin"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.786"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LEDStripCardGreenPinText"
            android:layout_width="133dp"
            android:layout_height="47dp"
            android:layout_marginTop="28dp"
            android:gravity="start|center_vertical"
            android:text="@string/green_pin"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LEDStripCardRedPinText"
            android:layout_width="107dp"
            android:layout_height="49dp"
            android:layout_marginTop="28dp"
            android:gravity="start|center_vertical"
            android:text="@string/red_pin"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SequentialGeneratorRecyclerView"
            android:layout_width="400dp"
            android:layout_height="318dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LEDStripCardRedPinText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>